# kwin-plugins

./: CMakeLists.txt
debian/: control
plugins/: CMakeLists.txt
plugins/decoration/: CMakeLists.txt  button.cpp  button.h  decoration.cpp  decoration.h  x11shadow.cpp
plugins/roundedwindow/: CMakeLists.txt  roundedwindow.cpp  roundedwindow.h
tabbox/cutefish_thumbnail/contents/ui/: main.qml
